# osfabricum

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: app.py  main.py
apps/cli/: main.py
apps/worker/: main.py
catalog/seed/: architectures.yaml  board_bsp.yaml  board_revisions.yaml  boards.yaml  boot_chains.yaml  distributions.yaml  firmware.yaml  initramfs_profiles.yaml  kernels.yaml  soc_families.yaml  sources.yaml  toolchains.yaml
config/: osfabricum.dev.toml
docs/: BRANDING_DESIGNER.md  BSP_DESIGNER.md  BUILD_ANALYSIS.md  EXPLAIN_ENGINE.md  GAPS.md  GRAPHICAL_SHELL_DESIGNER.md  IMPLEMENTATION_AUDIT.md  KERNEL_DRIVER_DESIGNER.md  LAYER_MODEL.md  LOCKFILE.md  NEXT_ACTIONS.md  OS_BUILDER_WIZARD.md  PACKAGE_WORKSPACE.md  ROADMAP.md
docs/formats/: ofpkg.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_job_tasks_table.py  0002_add_jobs_table.py  0003_jobs_required_tags.py  0003_kernel_metadata_json.py  0004_firmware_metadata_json.py  0005_artifact_input_hash.py  0006_universal_os_builder_model.py  0007_profile_versions.py  0008_build_drafts.py  0009_kernel_driver_designer.py  0010_image_recipe_designer.py  0011_package_workspace.py  0012_feature_variant_manager.py  0013_feed_publisher.py  0014_runtime_package_policy.py  0015_branding_designer.py  0016_graphical_shell.py  0017_app_catalog.py  0018_desktop_integration.py  0019_theme_designer.py  0020_user_designer.py  0021_network_designer.py  0022_service_designer.py  0023_security_designer.py  0024_compliance_designer.py  0025_update_ota_recovery.py  0026_sdk_devshell.py  0027_cache_mirror_offline.py  0028_hardware_probe.py  0029_layers_designer.py  0030_overrides_masking.py  0031_patch_queue.py  0032_dependency_graph.py  0033_explain_engine.py  0034_diff_reports.py  0035_generations_rollback.py  0036_upgrade_service.py  0037_lockfile.py  0038_importers.py  (+17 more)
osfabricum/: __init__.py  logging.py  settings.py
osfabricum/analysis/: __init__.py  service.py
osfabricum/appcatalog/: __init__.py  service.py
osfabricum/board/: __init__.py  service.py
osfabricum/bootchain/: __init__.py  service.py
osfabricum/bootprofiler/: __init__.py  service.py
osfabricum/branding/: __init__.py  service.py
osfabricum/builder/: __init__.py  context.py  recipe.py
osfabricum/compliance/: __init__.py  service.py
osfabricum/composer/: __init__.py  packages.py  rootfs.py  services.py
osfabricum/config/: __init__.py  distro_config.py  firstboot.py  overlay.py  renderer.py
osfabricum/db/: engine.py  models.py  seed_data.py  session.py
osfabricum/desktopint/: __init__.py  service.py
osfabricum/diff/: __init__.py  service.py
(+374 files in other folders)
